--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Vì sao giá vàng miếng giảm sốc cả 1-2 triệu đồng/lượng?</h1>
-<img src="https://cdnphoto.dantri.com.vn/U3vLq6Q2efPqjzTt_FN3TBL5eIU=/thumb_w/1360/2023/03/29/vangmq34-edited-1680024670104.jpeg" alt="">
+<img src="https://cdnphoto.dantri.com.vn/U3vLq6Q2efPqjzTt_FN3TBL5eIU=/thumb_w/1360/2023/03/29/vangmq34-edited-1680024670104.jpeg" width="1000" hight="2000" alt="">
 <p>Trái ngược với "sóng" vàng miếng, giá vàng nhẫn không có biến động đáng kể, sáng nay tăng tiếp 50.000 đồng mỗi chiều, hiện được niêm yết tại mức 58,9-59,9 triệu đồng/lượng (mua - bán). Vàng nhẫn đã tăng hơn 10% so với đầu năm. Chênh lệch giữa 2 chiều là 1 triệu đồng.
     <br>
     Trên thị trường quốc tế, giá vàng hôm nay cũng giảm gần 10 USD/ounce, giao dịch quanh 1.983 USD. Giá vàng miếng trong nước cao hơn gần 11 triệu đồng mỗi lượng so với thế giới, còn vàng nhẫn trong nước cao hơn 1 triệu đồng.</p>
